# diocli

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  bootstrap  configure.ac  diocliBuildAll.cmd  getVersion.sh
DLL/: CPPSDKD.DLL.exp  CPPSDKd.DLL.dll.manifest
DioCLI/: ApplicationDefs.h  BillingDefs.h  CommandDefs.h  ConsoleControl.cpp  ConsoleControl.h  DioCLI.cbp  DioCLI.cpp  DioCLI.layout  DioCLI.rc  DioCLI.sln  DioCLI.vcproj  DiomedeCmdLine.h  DiomedeMultiArg.h  DiomedePEM.h  DiomedeStdOut.h  DiomedeSwitchArg.h  DiomedeTask.cpp  DiomedeTask.h  DiomedeUnlabeledMultiArg.h  DiomedeUnlabeledValueArg.h  DiomedeValueArg.h  Enum.h  Makefile.am  README.md  ReadMe.txt  ResumeInfoData.cpp  ResumeInfoData.h  ResumeManager.cpp  ResumeManager.h  ResumeNamedMutex.h  SimpleRedirect.cpp  SimpleRedirect.h  makeCertObj.bat  resource.h  stdafx.cpp  stdafx.h  test3.doc
DioCLI/TestPEMUpdate/: Diomede.pem  DiomedePEM.h
Include/: BuildVersion.h  BuildVersionUtils.h  CPPSDKInterface.h  DiomedeDLLInterface.h  DiomedeSDKDefs.h  DiomedeStorage.h  Makefile.am  Makefile.in  types.h
Include/ErrorCodes/: Makefile.am  UIErrors.h  UtilErrors.h
Include/curl/: Makefile.in
Include/tclap/: Arg.h  ArgException.h  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  Makefile.am  Makefile.in  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h
Util/: BlowFish.cpp  Blowfish.h  BuildVersionUtils.cpp  ClientLog.cpp  ClientLog.h  ClientLogUtils.cpp  ClientLogUtils.h  CriticalSection.h  CustomMutex.h  ErrorType.cpp  ErrorType.h  EventClass.cpp  EventClass.h  FileLogger.cpp  FileLogger.h  ILogObserver.h  MemLogger.cpp  MemLogger.h  MessageTimer.cpp  MessageTimer.h  MutexClass.cpp  MutexClass.h  ProfileManager.cpp  ProfileManager.h  Stdafx.h  StringUtil.cpp  StringUtil.h  Thread.cpp  Thread.h  UserProfileData.cpp  UserProfileData.h  Util.cpp  Util.h  XString.cpp  XString.h  configure.cpp  configure.h  dictionary.h
Util/BuildUtil/: BuildUtil.cpp  BuildUtil.sln  BuildUtil.vcproj  stdafx.h
Util/CopyRightMacro/: DiomedeAddFileHeaderVS8.vb
Util/DLL/: Makefile.am  Util.vcproj  Util.vs9.vcproj
Util/Hasher/: CRC32.cpp  CRC32.h  Common.h  Hash.cpp  Hash.h  gosthash.cpp  md2.cpp  md2.h  md4.cpp  md5.cpp  sha1.cpp  sha2.cpp
Util/Static/: Makefile.am  ReadMe.txt  Util.cbp  Util.layout  Util.sln  Util.vcproj  Util.vs9.vcproj
Util/UpdatePEM/: ReadMe.txt  UpdatePEM.cpp  UpdatePEM.sln  UpdatePEM.vcproj  stdafx.cpp  stdafx.h
