# DIST_SUBDIRS = tclap ErrorCodes

noinst_Includedir = $(top_srcdir)/Include

IncludeDir = $(top_srcdir)/Include

noinst_Include_HEADERS = \
$(IncludeDir)/BuildVersion.h \
$(IncludeDir)/BuildVersionUtils.h \
$(IncludeDir)/CPPSDKInterface.h \
$(IncludeDir)/DiomedeDLLInterface.h \
$(IncludeDir)/DiomedeSDKDefs.h \
$(IncludeDir)/DiomedeStorage.h \
$(IncludeDir)/types.h

