
noinst_tclapdir = $(top_srcdir)/Include/tclap

tclapIncludeDir = $(top_srcdir)/Include/tclap

noinst_tclap_HEADERS = \
$(tclapIncludeDir)/CmdLineInterface.h \
$(tclapIncludeDir)/ArgException.h \
$(tclapIncludeDir)/CmdLine.h \
$(tclapIncludeDir)/XorHandler.h \
$(tclapIncludeDir)/MultiArg.h \
$(tclapIncludeDir)/UnlabeledMultiArg.h \
$(tclapIncludeDir)/ValueArg.h \
$(tclapIncludeDir)/UnlabeledValueArg.h \
$(tclapIncludeDir)/Visitor.h Arg.h \
$(tclapIncludeDir)/HelpVisitor.h \
$(tclapIncludeDir)/SwitchArg.h \
$(tclapIncludeDir)/MultiSwitchArg.h \
$(tclapIncludeDir)/VersionVisitor.h \
$(tclapIncludeDir)/IgnoreRestVisitor.h \
$(tclapIncludeDir)/CmdLineOutput.h \
$(tclapIncludeDir)/StdOutput.h \
$(tclapIncludeDir)/DocBookOutput.h \
$(tclapIncludeDir)/OptionalUnlabeledTracker.h \
$(tclapIncludeDir)/Constraint.h \
$(tclapIncludeDir)/ValuesConstraint.h

